client/my-sites/site-logs/components/site-logs-toolbar/style.scss
.site-logs-toolbar {
	display: flex;
	align-items: stretch;
	padding-bottom: 16px;
	flex-wrap: wrap;
	justify-content: flex-start;
	gap: 8px;
	margin-bottom: 1em;

	button {
		height: initial;
	}
}

.site-logs-toolbar__download-progress {
	display: flex;
	align-items: center;
	color: var(--color-neutral-50);
	font-size: 0.875rem;
}

